<resources>
    <string name="shr_app_name" translatable="false">IOTA</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>
    <string name="shr_button_next">Login</string>
    <string name="shr_button_cancel">Cancel</string>
    <string name="shr_error_password">Password must contain at least 8 characters.</string>
    <string name="shr_incorrect_password">Password or Username is incorrect.</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Title</string>
    <string name="shr_product_description">Secondary text</string>
    <string name="m_length">MicrobitID must be 4 digits</string>
    <string name="s_length">Speed Limit must be at least 1 digits</string>
    <string name="m_letters">Must only contain numbers</string>
    <string name="o_error">Please select an Object type</string>

    <string name="d_tittle">Confirm</string>
    <string name="d_extra">Are you sure you want to add this device?</string>
    <string name="d_add">Add</string>
    <string name="update">Update</string>
    <string name="d_cancel">Cancel</string>
    <string name="objectMessage">Are you sure you want to delete this type. The type must not reference any devices for it to be deleted</string>

    <string name="d_extra_2">Are you sure you want to unassign this device?</string>
    <string name="d_extra_3">Are you sure you want to delete this device?</string>
    <string name="d_remove">Remove</string>

    <!-- Shrine backdrop menu labels -->
    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="add_device">Add Device</string>
    <string name="analytics">Analytics</string>
    <string name="label">MicrobitID</string>
    <string name="objectid">Object</string>
    <string name="car">Car</string>
    <string name="people">People</string>
    <string name="road_mark">Road Mark</string>
    <string name="speed_limit">Speed Limit</string>
    <string name="base_configuration">Base Configuration</string>
    <string name="select_a_location">Select a Location</string>
    <string name="optional_configuration">Optional Configuration</string>
    <string name="map">Map</string>
    <string name="map_of_all_objects">Map of all Objects:</string>
    <string name="manage_users">Manage Users</string>
    <string name="search">Search</string>
    <string name="user_details">User Details</string>
    <string name="assigned_devices">Assigned Devices</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="manage_devices">Manage Devices</string>
    <string name="save">Save</string>
    <string name="manage_rules">Manage Rules</string>
    <string name="step_one">Step One</string>
    <string name="rules">Rules:</string>
    <string name="next">Next</string>
    <string name="condition_must_have_a_assigned_group_select">Condition Must Have a Assigned Group (select)</string>
    <string name="speed">Speed</string>
    <string name="map_of_crashes">Map of Crashes</string>
    <string name="my_profile">My Profile</string>
    <string name="my_map">My Map</string>
    <string name="my_analytics">My Analytics</string>
    <string name="microbitid">MicrobitID</string>
    <string name="is_administrator">Is Administrator</string>
    <string name="chats">Chats</string>
</resources>
