<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addDevice"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        app:iconTint="?android:attr/textColorPrimary"
        app:icon="@drawable/ic_round_devices_other_24"
        android:text="@string/manage_devices" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/map"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        app:iconTint="?android:attr/textColorPrimary"
        app:icon="@drawable/ic_outline_map_24"
        android:text="@string/map" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/users"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        app:iconTint="?android:attr/textColorPrimary"
        app:icon="@drawable/ic_baseline_person_24"
        android:text="@string/manage_users" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/object"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        app:iconTint="?android:attr/textColorPrimary"
        app:icon="@drawable/domain"
        android:text="Manage Objects" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rules"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        app:iconTint="?android:attr/textColorPrimary"
        app:icon="@drawable/ic_baseline_rule_24"
        android:text="@string/manage_rules" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/chats"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        app:iconTint="?android:attr/textColorPrimary"
        app:icon="@drawable/ic_baseline_chat_24"
        android:text="@string/chats" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        app:iconTint="?android:attr/textColorPrimary"
        app:icon="@drawable/ic_baseline_analytics_24"
        android:text="@string/analytics" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SystemConfig"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        app:iconTint="?android:attr/textColorPrimary"
        app:icon="@drawable/settings"
        android:text="App Configuration" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/domain"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        app:iconTint="?android:attr/textColorPrimary"
        app:icon="@drawable/domain"
        android:text="Dashboard" />

    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        app:iconTint="?android:attr/textColorPrimary"
        app:icon="@drawable/ic_baseline_login_24"
        android:text="@string/logout" />

</merge>