<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/myProfile"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        app:iconTint="?android:attr/textColorPrimary"
        app:icon="@drawable/ic_baseline_person_24"
        android:text="@string/my_profile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/map"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        app:iconTint="?android:attr/textColorPrimary"
        app:icon="@drawable/ic_outline_map_24"
        android:text="@string/my_map" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/myAnalytics"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        app:iconTint="?android:attr/textColorPrimary"
        app:icon="@drawable/ic_outline_map_24"
        android:text="@string/my_analytics" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/chat"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        app:iconTint="?android:attr/textColorPrimary"
        app:icon="@drawable/ic_baseline_chat_24"
        android:text="Chat" />

    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        app:iconTint="?android:attr/textColorPrimary"
        app:icon="@drawable/ic_baseline_login_24"
        android:text="@string/logout" />

</merge>