<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMicrobit">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText"
        app:elevation="0dp">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/Widget.Shrine.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            app:contentInsetStart="0dp"
            app:navigationIcon="@drawable/shr_close_menu"
            app:title="Edit Device" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/product_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="@color/productGridBackgroundColor"
        android:elevation="8dp"
        android:paddingStart="@dimen/shr_product_grid_spacing"
        android:paddingEnd="@dimen/shr_product_grid_spacing"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="6dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/textView"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/base_configuration"
                android:textAppearance="@style/TextAppearance.Shrine.heading"/>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/microbitText2"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/label"
                app:startIconDrawable="@drawable/ic_round_devices_other_24"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/microbitTextInput2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/microbitName"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:hint="Name"
                app:startIconDrawable="@drawable/ic_round_devices_other_24"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/microbitTextInputName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:background="@color/colorPrimaryDark"
                android:backgroundTint="#42000000"
                >

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/productGridBackgroundColor"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="13dp"
                    android:layout_marginBottom="8dp"
                    app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24" />
            </RelativeLayout>

            <View
                android:layout_width="333dp"
                android:layout_height="1dp"
                android:layout_margin="14dp"
                android:background="#DD000000" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Shrine.heading"
                android:text="@string/select_a_location" />

            <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                mapbox:mapbox_cameraTargetLat="54.00974373834193"
                mapbox:mapbox_cameraTargetLng="-2.786445233398231"
                mapbox:mapbox_renderTextureMode="true"
                mapbox:mapbox_styleUrl="mapbox://styles/cameronpugh282/ckzbb4w7y003v15mu26o1x0ag"
                mapbox:mapbox_cameraZoom="15" />

            <View
                android:layout_width="333dp"
                android:layout_height="1dp"
                android:layout_margin="14dp"
                android:background="#DD000000" />

            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add"
                    style="@style/Widget.Shrine.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="140dp"
                    android:layout_marginRight="140dp"
                    android:text="@string/save" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>