<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepOne">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText"
        app:elevation="0dp">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/Widget.Shrine.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            app:contentInsetStart="0dp"
            app:navigationIcon="@drawable/shr_close_menu"
            app:title="Add Rule" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/product_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="@color/productGridBackgroundColor"
        android:elevation="8dp"
        android:paddingStart="@dimen/shr_product_grid_spacing"
        android:paddingEnd="@dimen/shr_product_grid_spacing"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="6dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginBottom="12dp"
                android:text="@string/step_one"
                android:textAppearance="@style/TextAppearance.Shrine.Title" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Conditions:"
                android:textAppearance="@style/TextAppearance.Shrine.heading"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:background="@color/colorPrimaryDark"
                android:backgroundTint="#42000000"
                >

                <Spinner
                    android:id="@+id/conditions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/productGridBackgroundColor"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="13dp"
                    android:layout_marginBottom="8dp"
                    app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="13dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addConditions"
                    style="@style/Widget.Shrine.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="140dp"
                    android:layout_marginRight="140dp"
                    android:text="Add" />

            </RelativeLayout>

            <View
                android:layout_width="350dp"
                android:layout_height="4dp"
                android:layout_gravity="top|center"
                android:background="?android:attr/textColorPrimary" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rules"
                android:textAppearance="@style/TextAppearance.Shrine.heading"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRules"
                app:fastScrollEnabled="true"
                android:layout_marginTop="20dp"
                app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
                app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
                app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
                app:fastScrollVerticalTrackDrawable="@drawable/line_drawable"
                android:layout_width="match_parent"
                android:layout_height="300dp">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/warningLabel"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:padding="6dp"
                android:paddingTop="15dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_round_warning_24"
                    android:tint="@color/red"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/condition_must_have_a_assigned_group_select"
                    android:textAppearance="@style/TextAppearance.Shrine.heading.warning"/>

            </LinearLayout>

            <View
                android:layout_width="350dp"
                android:layout_height="4dp"
                android:layout_gravity="top|center"
                android:background="?android:attr/textColorPrimary" />


            <RelativeLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/nextConditions"
                    style="@style/Widget.Shrine.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="140dp"
                    android:layout_marginRight="140dp"
                    android:text="@string/next" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>